Fixed table colspans and text align

--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,7 @@ table {
 
 table td, table th {
     border: 0.5px solid #000011;
+    text-align: center;
 }
 
 table tr:nth-child(even) {
